2.0.3-pre1

Thu Jul 21 14:02:08 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - add the missing LDFLAGS to gendb
 - add Belkin F6C1100-UNV to the driver.list (thanks to Dave Breiland)

Wed Jul 20 11:15:08 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - adapt newhidups to recognize units from Tripplite, Mustek and
   Unitek for development purpose

 - isbmex: fix various errors in formulas, add shutdown capability
   and bump driver release to 0.05

 (Ricardo Martinezgarza)

 - fix the ID string for Sysgration UPGUARDS Pro650

 (Simon J. Rowe)

 - various fixes in the RedHat spec file

 (Thomas Jarosch)

Fri Jul  1 08:15:56 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - isbmex: revert back to B9600 instead of B2400, as it broke the
   communication, and bump the driver release to 0.04 (thanks to
   Ricardo Martinezgarza)
 - genericups: add a trace to expose overriden data, and bump the
   driver release to 1.31

Thu Jun 30 13:13:02 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - solis: fix a naming colision on Solaris, bump the driver release to
   0.41 (thanks to Paweł Kierdelewicz)

Tue Jun 28 16:41:14 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - *mib.h: remove all references to SU_TYPE_TIME as it's not used
   and cause some problems when exposing the data
    
2.0.2

Mon Jun 27 08:11:54 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - Final version number bump for release.
 - driver.list: add Smart-UPS USB support, and leave the experimental
   flag for hidups/newhidups and APC units

2.0.2-pre2

Wed Jun 22 07:11:54 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - tripplite: fix a battery charge bug, remove some extraneous
   leading zeros from integral variables (temperature, ...) and
   bump driver release to 0.8 

 (Cedric Tefft) [Alioth Patch #301783]

 - newhidups: remove experimental flag
 - driver.list: add MGE Ellipse Office, remove legacy hidups support for