@@ -1,5 +1,11 @@
 2.0.3-pre1
 
+Fri Jul 22 08:20:08 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>
+
+ - newhidups: minor change in interface claiming to avoid message like
+   "process <pid> (<name>) did not claim interface X before use" upon
+   device reopening, and bump driver release to 0.24
+
 Thu Jul 21 14:02:08 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>
 
  - add the missing LDFLAGS to gendb
